# je_software

./: .gitignore  CMakeLists.txt  README.md  environment.yml  je_software_hardware_plugins.xml  package.xml  setup.py
action/: ExecuteMotionSequence.action  RecoverToInitial.action
config/: calibration_points_example.json  charuco_7x5_sq50mm_mk30mm_DICT_4X4_50_420x297mm_300dpi.json  ik_para_left.yaml  ik_para_right.yaml  orbbec.yaml  pcb_process_demo.yaml
config/moveit/: joint_limits.yaml  kinematics.yaml  l_jearm.srdf  lh_jearm.srdf  ompl_planning.yaml
docs/: pcb_process_state_machine.mmd
je_software/: base_manager.py  calibration_common.py  dynamixel_init_joint_state_node.py  eye_in_hand_calibration_node.py  eye_in_hand_validator_node.py  eye_to_hand_calibration_node.py  eye_to_hand_validator_node.py  fixed_inspection_node.py  fixed_line_vision_node.py  fixed_slot_provider_node.py  hand_eye_calibration_node.py  hand_eye_common.py  interpolate_meta.py  je_cli_target_publisher.cpp  je_end_effector_cli.cpp  je_robot_node.cpp  je_zmq_system_hardware.cpp  je_zmq_system_hardware.hpp  jearm_jsonl_replayer_node.py  jeserver.cpp  joint_rate_monitor_node.py  jsonl_replayer_node.cpp  manager_node.py  moveit_motion_resolver.py  mujoco_sim_node.py  orbbec_intrinsics_validator_node.py  pcb_process_common.py  pcb_process_task_manager_node.py  read_dynamixel_mode.py  recorder_manager_node.py  replay_node.py  robot_node.py  ros2_qos.py  tactile_sensor_node.py  terminal_key_signal_node.py  test_publisher_node.py  verify_velocity_torque.py  viz_robot_jsonl.py  zmq_motion_backend_node.py
je_software/cameras/: utils.py
je_software/cameras/orbbec/: camera_orbbec.py
je_software/motors/: motors_bus.py
je_software/motors/dynamixel/: dynamixel.py
je_software/new_system_architecture/: __init__.py  calibration_common.py  eye_in_hand_calibration_node.py  eye_in_hand_validator_node.py  eye_to_hand_validator_node.py  fixed_inspection_node.py  fixed_line_vision_node.py  fixed_slot_provider_node.py  hand_eye_calibration_node.py  hand_eye_common.py  moveit_motion_resolver.py  pcb_process_task_manager_node.py  terminal_key_signal_node.py  zmq_motion_backend_node.py
je_software/ros2bag_parser/: __init__.py  cli.py  parser.py
je_software/urdf/LH_JEARM/: Link2.STL  Link5.STL  zongzhuang2.urdf  zongzhuang2.xml
je_software/urdf/L_JEARM/: L_JEARM.urdf  Link1.STL  Link2.STL  Link3.STL  Link4.STL  Link5.STL
je_software/urdf/RH_JEARM/: Link2.STL  Link5.STL  Link7.STL  zongzhuang2.urdf  zongzhuang2.xml
je_software/urdf/R_JEARM/: Link1.STL  Link3.STL  Link4.STL  Link5.STL  Link7.STL  R_JEARM.urdf  base_link.STL
je_software/utils/: utils.py
launch/: 3_cameras.launch.py  agilex_robot.launch.py  dynamixel_init_joint_state.launch.py  je_end_effector_cli.launch.py  je_robot_node.launch.py  jearm_rviz_replay.launch.py  jsonl_replayer_node.launch.py  l_jearm_moveit.launch.py  lh_jearm_moveit.launch.py  manager.launch.py  manager_test.launch.py  mujoco_sim.launch.py  orbbec.launch.py  pcb_process_demo.launch.py  replay_node.launch.py  tactile_sensor.launch.py
msg/: EndEffectorCommand.msg  EndEffectorCommandLR.msg  InspectionResult.msg  MotionStep.msg  PcbPresence.msg  RobotState.msg
rviz/: jearm_replay.rviz
scripts/: agilex_robot  camera_node  dynamixel_init_joint_state  eye_in_hand_calibration  eye_in_hand_validator  eye_to_hand_calibration  eye_to_hand_validator  fixed_inspection_node  fixed_line_vision_node  fixed_slot_provider_node  hand_eye_calibration  jearm_jsonl_replayer_node  joint_rate_monitor  manager_node  orbbec_intrinsics_validator  pcb_process_task_manager_node  plot_dynamixel_positions  print_int_12bit  read_dynamixel_mode  replay_node  ros2bag_parser  tactile_sensor  terminal_key_signal_node  test_publisher  validate_moveit_ik_jsonl.py  zmq_motion_backend_node
src/je_software/: setup.cfg  setup.py
src/je_software/config/: calibration_file1.jsonl
src/je_software/je_software/: base_manager.py  camera_node.py  manager_node.py  mujoco_sim_node.py  record_valid_indices.py  tactile_sensor_node.py
src/je_software/je_software/cameras/: __init__.py  configs.py
src/je_software/je_software/cameras/opencv/: camera_opencv.py
src/je_software/je_software/cameras/orbbec/: configuration_orbbec.py
src/je_software/launch/: 3_cameras.launch.py  agilex_robot.launch.py  mujoco_sim.launch.py  orbbec.launch.py  replay_node.launch.py  tactile_sensor.launch.py
src/ros2_ik_cpp/: CMakeLists.txt  README.md  package.xml
src/ros2_ik_cpp/config/: planning_module.yaml
src/ros2_ik_cpp/include/ros2_ik_cpp/: ik_solver.hpp
src/ros2_ik_cpp/src/: ik_node.cpp  ik_solver.cpp  ik_solver_node.cpp
srv/: GetAvailableSlot.srv  GetPcbPickPose.srv  GetRobotState.srv  TriggerInspection.srv
test/: test_calibration_common.py  test_copyright.py  test_flake8.py  test_ik.py  test_jearm_jsonl_replayer_node.py  test_oculus_publisher.py  test_pcb_process_flow.py  test_pep257.py  test_ros2bag_parser.py  test_zmq_motion_backend.py
urdf/: L_JEARM.urdf  Link6.STL  Link7.STL  base_link.STL
urdf/URDF_LAST/DOUB_JEARM/: DOUB_JEARM.urdf  Link11.STL  Link12.STL  Link13.STL  Link14.STL  Link15.STL  Link16.STL  Link17.STL  Link26.STL
urdf/URDF_LAST/LH_JEARM/: LH_JEARM.urdf  Link1.STL  Link3.STL  Link4.STL  Link6.STL  Link7.STL  base_link.STL
urdf/URDF_LAST/RH_JEARM/: Link6.STL  base_link.STL
utils/: image_writer.py
utils/include/: ik_solver.hpp
utils/src/: ik_solver.cpp
