<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>je_software</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gmvonkleist@gmail.com">kleist</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>
  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>eigen</build_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <!-- System deps for je_robot_node.cpp (rosdep keys) -->
  <depend>cppzmq</depend>
  <depend>libzmq3-dev</depend>
  <depend>nlohmann-json3-dev</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
