<?xml version="1.0"?>
<package format="3">
  <name>ros2_ik_cpp</name>
  <version>0.0.1</version>
  <description>Simple ROS2 C++ node for 6D IK using Pinocchio</description>
  <maintainer email="chenjiabao3h@gmail.com">dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>pinocchio</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
  </export>
</package>
